--- a/dFC_Analysis_notebook.ipynb
+++ b/dFC_Analysis_notebook.ipynb
@@ -16,7 +16,7 @@
     "import dfc,FreqDwell,PlotDfc\n",
     "from dfc import DynamicConnectivityMeasure\n",
     "from FreqDwell import freq_dwell \n",
-    "from PlotDfc import plot_dfc\n",
+    "from PlotDFC import plot_dfc\n",
     "from dfc import upper_tri\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
