--- a/dFC_Analysis_notebook.ipynb
+++ b/dFC_Analysis_notebook.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dfc,FreqDwell,PlotDfc\n",
+    "import dfc,FreqDwell,PlotDFC\n",
     "from dfc import DynamicConnectivityMeasure\n",
     "from FreqDwell import freq_dwell \n",
     "from PlotDFC import plot_dfc\n",
