--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -1105,7 +1105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These matrices "
+    "These matrices correspond to the similarity of sliding-window connectivity as a function of time."
    ]
   },
   {
@@ -1117,14 +1117,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#np.savez_compressed(os.path.join(datapath,'FC_variability.npz'),all_cosine_sim=all_cosine_sim,ids=allid)"
+    "np.savez_compressed(os.path.join(datapath,'FC_variability.npz'),all_cosine_sim=all_cosine_sim,ids=allid)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next steps from here \n",
+    "--"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To perform K-means clustering on the FC matrices, use sklearn MinibatchKMeans() on all_FC_sl. For visualization, average all FC matrices with the same labels\n",
+    "- Spectral Clustering or DBScan can be performed by inputting the similarity maps, and use the SpectralClustering or DBScan estimators from sklearn \n",
+    "- BCT can be used to investigate time-varying graph theory metrics \n",
+    "- HMM using hmmlearn https://github.com/hmmlearn/hmmlearn , directly on the time-series (allts)\n",
+    "- A notebook visulazing and comparing the outputs of different methods "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
