--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -1139,8 +1139,8 @@
    "metadata": {},
    "source": [
     "- To perform K-means clustering on the FC matrices, use sklearn MinibatchKMeans() on all_FC_sl. For visualization, average all FC matrices with the same labels\n",
-    "- Spectral Clustering or DBScan can be performed by inputting the similarity maps, and use the SpectralClustering or DBScan estimators from sklearn \n",
-    "- BCT can be used to investigate time-varying graph theory metrics \n",
+    "- Spectral Clustering or DBScan can be performed by inputting the similarity maps (all_cosine_sim), and use the SpectralClustering or DBScan estimators from sklearn \n",
+    "- BCT can be used to investigate time-varying graph theory metrics starting from the all_FC_sl matrices\n",
     "- HMM using hmmlearn https://github.com/hmmlearn/hmmlearn , directly on the time-series (allts)\n",
     "- A notebook visulazing and comparing the outputs of different methods "
    ]
