Ignore not image files on the data folder

--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -132,8 +132,9 @@
     "allid = []\n",
     "\n",
     "for curfile in fileslist:\n",
-    "    allts.append(np.load(os.path.join(datapath,'10subjects',curfile))['ts'])\n",
-    "    allid.append(np.load(os.path.join(datapath,'10subjects',curfile))['id'])"
+    "    if curfile.endswith(\".npz\"):\n",
+    "        allts.append(np.load(os.path.join(datapath,'10subjects',curfile))['ts'])\n",
+    "        allid.append(np.load(os.path.join(datapath,'10subjects',curfile))['id'])"
    ]
   },
   {
@@ -832,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
